--- a/app/Gladiator/pom.xml
+++ b/app/Gladiator/pom.xml
@@ -30,7 +30,28 @@
 					</archive>
 				</configuration>
 			</plugin>
-
+			
+			<plugin>
+	      <artifactId>maven-assembly-plugin</artifactId>
+	      <configuration>
+	        <descriptorRefs>
+	          <descriptorRef>jar-with-dependencies</descriptorRef>
+	        </descriptorRefs>
+	        <archive>
+	          <manifest>
+	            <mainClass>es.dagaren.gladiator.main.Main</mainClass>
+	          </manifest>
+	        </archive>
+	      </configuration>
+	      <executions>
+	        <execution>
+	          <phase>package</phase>
+	          <goals>
+	            <goal>single</goal>
+	          </goals>
+	        </execution>
+	      </executions>
+	    </plugin>
 		</plugins>
 	</build>
 
