Se recolocan los contenidos del proyecto

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<description>Gladiator chess engine</description>
 	
 	<properties>
-	  <release.dir>${project.basedir}/../../releases/</release.dir>
+	  <release.dir>${project.basedir}/releases/</release.dir>
 	</properties>
 	
 	<build>
