--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,12 @@
 # Root logger option
-log4j.rootLogger=DEBUG, file
+#log4j.rootLogger=DEBUG, file
+
+#log4j.logger.es.dagaren.gladiator.time.Clock=DEBUG, file
+log4j.logger.es.dagaren.gladiator.engine.Engine=DEBUG, file
+#log4j.logger.es.dagaren.gladiator.communication.ConsoleCommandController=DEBUG, file
+#log4j.logger.es.dagaren.gladiator.search.AlphaBetaSearcher= INFO, file
+
+
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
